# GameBird

./: .gitignore  CMakeLists.txt  LICENSE  README.md  installer.iss  run.ps1
.github/workflows/: release.yml
qml/: GameItem.qml  main.qml
src/: game.cpp  game.h  gamelibrary.cpp  gamelibrary.h  main.cpp
